# r507

./: .gitignore  README-EN.md  README.md  datas.json  docker-compose.yml  main.py  monitor.py
bruno/tests-app/: Action POST 2 - Add.bru  action-post-1.bru  action-put-1---udapte-sp.bru  collection.bru  host_delete_1.bru  host_post_1.bru  indicator-post-1.bru  indicatorvalues-delete-1---purge.bru
dockers-tests/: docker-compose.yml
frontend/: Dockerfile  configuration_edithost.html  graph.js  index.html  toaster.js
frontend/html/: configuration.html  configuration_actions.html  configuration_edithost.html  graph.js  index.html
server/: Dockerfile
server/app/: alembic.ini  database.py  main.py  pyproject.toml  requirements.txt  scheduler.py
server/app/alembic/: env.py
server/app/alembic/versions/: 36743f9614a5_ajouts_d_informations_sur_le_.py  3b700ae84d39_précision_de_l_unité_et_ajout_de_.py  93b366b2469b_ajout_d_un_champ_labels_aux_actions.py  958f57917ac2_initial_migration_with_complete_schema.py  a415bc77f0d8_ajout_d_un_champ_paramtres_à_un_.py  c4ee3c9e42b6_initialisation.py
server/app/models/: action.py  indicator.py  indicator_values.py
server/app/models/actions/: cpu_linux.py  get_interface_status.py  memory_linux.py  ping_google_linux.py  ping_time_linux.py
server/app/tools/: password_security.py
server/data/: secret.key  supervision.db
serveur/: Dockerfile  database.py  main.py  requirements.txt  supervision.db
serveur/models/: action.py  host.py  indicator.py
serveur/tools/: password_security.py
tests/clients/: docker-compose.yml
(+12 files in other folders)
